create outline functions in javascript

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <H1>Speed Typing Game</H1>
         <div>?</div>
     </header>
+    <button class="start-button" id="startButton">Start</button>
     <div class="game-container">
         <div class="timer" id="timer">00:00</div>
         <div class="score" id="score">0</div>
-        <div class="example-box" id="exampleBox"></div>
-        <textarea class="answer-box" id="answerBox"></textarea>
+        <div class="example-word" id="exampleWord">Word</div>
+        <textarea class="answer-word" id="answerWord">Word</textarea>
     </div>
     <footer>
         <p>Created for Educational purpose</p>
