hide start button and add input focus

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div>?</div>
     </header>
     <button class="start-button" id="startButton">Start Game</button>
-    <div class="game-container">
+    <div class="game-container hide" id="gamePlay">
         <div class="timer" id="timer">00:00</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Word</div>
-        <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus>Word</input>
+        <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus placeholder="word"></input>
         <div class="end-game-container" id="endGameContainer"></div>
     </div>
     <footer>
