add word functions to output random word

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="game-container hide" id="gamePlay">
         <div class="timer" id="timer">00:00</div>
         <div class="score" id="score">0</div>
-        <div class="example-word" id="exampleWord">Word</div>
+        <div class="example-word" id="exampleWord">Empty</div>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus placeholder="word"></input>
         <div class="end-game-container" id="endGameContainer"></div>
     </div>
@@ -24,6 +24,7 @@
         <p>Created for Educational purpose</p>
     </footer>
 
+    <script src="assets/js/words.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
