--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="timer" id="timer">00:00</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
-        <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus placeholder="word"></input>
+        <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus></input>
         <div class="end-game-container" id="endGameContainer"></div>
     </div>
     <footer>
