add basic styling to game play

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>?</div>
     </header>
     <button class="start-button" id="startButton">Start Game</button>
-    <div class="game-container hide" id="gamePlay">
+    <div class="game-container" id="gamePlay">
         <div class="timer" id="timer">00:00</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
