add eventlistener for start game on keydown

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <H1>Speed Typing Game</H1>
         <div>?</div>
     </header>
-    <button class="start-button" id="startButton">Start Game</button>
+    <button class="start-button" id="startButton" autofocus>Start Game</button>
     <div class="game-container" id="gamePlay">
-        <div class="timer" id="timer">00:00</div>
+        <div class="timer" id="timer">60</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
-        <input type="text" class="answer-word" id="answerWord" autocomplete="off" autofocus></input>
+        <input type="text" class="answer-word" id="answerWord" autocomplete="off"></input>
         <div class="end-game-container" id="endGameContainer"></div>
     </div>
     <footer>
