--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,16 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Speed Typing Game</title>
 </head>
+
 <body>
     <header>
         <H1>Speed Typing Game</H1>
         <div>?</div>
     </header>
-    <button class="start-button" id="startButton" autofocus>Start Game</button>
+    <div class="start-game" id="startGame">
+        <h2>Press any key to start Game</h2>
+        <button class="start-button" id="startButton" autofocus>Start Game</button>
+    </div>
     <div class="game-container" id="gamePlay">
         <div class="timer" id="timer">60</div>
         <div class="score" id="score">0</div>
@@ -27,4 +32,5 @@
     <script src="assets/js/words.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
