set eventlistener keydown to enter

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div>?</div>
     </header>
     <div class="start-game" id="startGame">
-        <h2>Press any key to start Game</h2>
+        <h2>Press Enter to Start Game</h2>
         <button class="start-button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container" id="gamePlay">
