add end game function and container with final score

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off"></input>
-        <div class="end-game-container" id="endGameContainer"></div>
+    </div>
+    <div class="end-game-container" id="endGameContainer">
+        <form action="POST">
+            <h3 class="game-outcome" id="gameOutcome"></h3>
+            <p class="text-outcome" id="textOutcome"></p>
+            <input type="email" id="email">
+        </form>
     </div>
     <footer>
         <p>Created for Educational purpose</p>
