add email input focus

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="start-button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container" id="gamePlay">
-        <div class="timer" id="timer">60</div>
+        <div class="timer" id="timer">5</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off"></input>
@@ -28,7 +28,7 @@
         <form action="POST">
             <h3 class="game-outcome" id="gameOutcome"></h3>
             <p class="text-outcome" id="textOutcome"></p>
-            <input type="email" id="email">
+            <input type="email" id="email" name="email">
         </form>
     </div>
     <footer>
