--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <input type="text" class="answer-word" id="answerWord" autocomplete="off"></input>
     </div>
     <div class="end-game-container" id="endGameContainer">
-        <form action="POST" class="form" id="form">
+        <form action="" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome"></h3>
             <p class="text-outcome" id="textOutcome"></p>
-            <input type="email" id="email" name="email">
-            <input type="submit" class="submit" id="email">
+            <input type="email" id="emailBox" name="email">
+            <input type="submit" class="submit" id="submitEmail">
         </form>
     </div>
     <footer>
