add background image and style

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <form action="" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome"></h3>
             <p class="text-outcome" id="textOutcome"></p>
-            <input type="email" id="emailBox" name="email">
-            <input type="submit" class="submit" id="submitEmail">
+            <input type="text" class="to-name" id="toName" placeholder="name">
+            <input type="email" id="emailBox" name="email" placeholder="email">
+            <button type="submit" class="submit" id="submitEmail">Send Score!</button>
         </form>
     </div>
     <footer>
