--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <button class="button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container" id="gamePlay">
-        <div class="timer" id="timer">5</div>
+        <div class="timer" id="timer">10</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off">
     </div>
-    <div class="end-game-container" id="endGameContainer">
+    <div class="end-game-container hide" id="endGameContainer">
         <form action="POST" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome">msg</h3>
             <p class="text-outcome" id="textOutcome"></p>
