--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         <div class="timer" id="timer">10</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
+        <label for="answerWord" class="hide">answer</label>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off">
     </div>
     <div class="end-game-container hide" id="endGameContainer">
         <form action="POST" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome">msg</h3>
             <p class="text-outcome" id="textOutcome"></p>
+            <label for="toName" class="hide"></label>
             <input type="text" class="form-box" id="toName" placeholder="name">
+            <label for="emailBox" class="hide"></label>
             <input type="email" class="form-box" id="emailBox" name="email" placeholder="email">
             <button type="submit" class="button" id="submitEmail">Send Score!</button>
         </form>
