--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <form action="POST" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome">msg</h3>
             <p class="text-outcome" id="textOutcome"></p>
-            <label for="toName" class="hide"></label>
-            <input type="text" class="form-box" id="toName" placeholder="name">
-            <label for="emailBox" class="hide"></label>
-            <input type="email" class="form-box" id="emailBox" name="email" placeholder="email">
+            <label for="toName">Your Name:</label>
+            <input type="text" class="form-box" id="toName">
+            <label for="emailBox">Your Email:</label>
+            <input type="email" class="form-box" id="emailBox" name="email">
             <button type="submit" class="button" id="submitEmail">Send Score!</button>
         </form>
     </div>
