--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <body>
     <header>
         <H1>Speed Typing Game</H1>
-        <div>?</div>
+        <button type="button" class="collapsible">?</button>
+        <div class="collapsible-content">
+            <p>This is how you play... <br>
+                Just press 'start game' and begin typing. Don't mind capitals. <br>
+                you have 60 seconds to type as many 6 letter words as you can.<br>
+                Every incorrect letter will turn red and every correct letter green. <br>
+                When the word is completely green, the next word will automatically show. <br>
+            The counter keeps the score. Good Luck!</p>
+        </div>
     </header>
     <div class="start-game" id="startGame">
         <h2>Press Enter to Start Game</h2>
@@ -25,10 +33,10 @@
         <div class="timer" id="timer">10</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
-        <label for="answerWord" class="hide">answer</label>
+        <label for="answerWord" class="answer-box">Type here:</label>
         <input type="text" class="answer-word" id="answerWord" autocomplete="off">
     </div>
-    <div class="end-game-container hide" id="endGameContainer">
+    <div class="end-game-container" id="endGameContainer">
         <form action="POST" class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome">msg</h3>
             <p class="text-outcome" id="textOutcome"></p>
