--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <input type="text" class="answer-word" id="answerWord" autocomplete="off">
     </div>
     <div class="end-game-container hide" id="endGameContainer">
-        <form action="POST" class="form" id="form">
+        <form class="form" id="form">
             <h3 class="game-outcome" id="gameOutcome">msg</h3>
             <p class="text-outcome" id="textOutcome"></p>
             <label for="toName">Your Name:</label>
-            <input type="text" class="form-box" id="toName">
+            <input type="text" class="form-box" id="toName" required>
             <label for="emailBox">Your Email:</label>
             <input type="email" class="form-box" id="emailBox" name="email">
-            <button type="submit" class="button" id="submitEmail">Send Score!</button>
+            <input type="submit" value="Send Score!" class="button" id="submitEmail">
         </form>
     </div>
     <footer>
@@ -52,7 +52,9 @@
     </footer>
 
     <script src="assets/js/words.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
+    
 </body>
 
 </html>
