set correct classnames show/hide to divs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             The counter keeps the score. Good Luck!</p>
         </div>
     </header>
-    <div class="start-game" id="startGame">
+    <div class="start-game show" id="startGame">
         <h2>Press Enter to Start Game</h2>
         <button class="button" id="startButton" autofocus>Start Game</button>
     </div>
