set collapsible content to hide on start

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <H1>Speed Typing Game</H1>
         <button type="button" class="collapsible">?</button>
-        <div class="collapsible-content">
+        <div class="collapsible-content" id="collContent">
             <p>This is how you play... <br>
                 Just press 'Start Game' and begin typing. Don't mind capitals. <br>
                 you have 60 seconds to type as many 6-letter words as you can.<br>
