add return button and function to end game screen

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <input type="text" class="form-box" id="toName" name="user_name" required>
             <label for="emailBox">Your Email:</label>
             <input type="email" class="form-box" id="emailBox" name="user_email">
-            <input type="submit" value="Send Score!" class="button" id="submitEmail">
+            <input type="submit" value="Send Score" class="button" id="submitEmail">
+            <input type="button" value="Return to Start" class="button" id="returnStart">
         </form>
     </div>
     <footer>
