--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <div class="start-game show" id="startGame">
-        <h2>Press Enter to Start Game</h2>
+        <h2>Press Enter to <br>Start Game</h2>
         <button class="button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container hide" id="gamePlay">
