add responsiveness bigger screen sizes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <button class="button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container hide" id="gamePlay">
-        <div class="timer" id="timer">10</div>
+        <label for="timer">Time:</label>
+        <div class="timer" id="timer">60</div>
+        <label for="score">Score:</label>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
         <label for="answerWord" class="answer-box">Type here:</label>
@@ -50,7 +52,7 @@
         </form>
     </div>
     <footer>
-        <p>Created for Educational purpose</p>
+        <p>&copy; Created for Educational purpose</p>
     </footer>
 
     <script src="assets/js/words.js"></script>
