--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <button class="button" id="startButton" autofocus>Start Game</button>
     </div>
     <div class="game-container hide" id="gamePlay">
-        <label for="timer">Time:</label>
+        <div>Time:</div>
         <div class="timer" id="timer">60</div>
-        <label for="score">Score:</label>
+        <div>Score:</div>
         <div class="score" id="score">0</div>
         <div class="example-word" id="exampleWord">Empty</div>
         <label for="answerWord" class="answer-box">Type here:</label>
@@ -56,7 +56,7 @@
     </footer>
 
     <script src="assets/js/words.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
