--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <meta name="description" content="Speed Typing Game">
     <meta name="keywords" content="typing, speed typing, typing game">
     <meta name="author" content="Bastiaan Milo">
+    <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Speed Typing Game</title>
 </head>
@@ -25,7 +31,7 @@
                 you have 60 seconds to type as many 6-letter words as you can.<br>
                 Every incorrect letter will turn red and every correct letter green. <br>
                 When the word is completely green, the next word will automatically show. <br>
-            The counter keeps the score. Good Luck!</p>
+                The counter keeps the score. Good Luck!</p>
         </div>
     </header>
     <div class="start-game show" id="startGame">
