--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
     
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Speed Typing Game</title>
@@ -26,13 +25,13 @@
     <header>
         <H1>Speed Typing Game</H1>
         <button type="button" class="collapsible">?</button>
-        <div class="collapsible-content" id="collContent">
+        <div class="collapsible-content">
             <p>This is how you play... <br>
                 Just press 'Start Game' and begin typing. Don't mind capitals. <br>
                 you have 60 seconds to type as many 6-letter words as you can.<br>
                 Every incorrect letter will turn red and every correct letter green. <br>
                 When the word is completely green, the next word will automatically show. <br>
-                The counter keeps the score. Good Luck!</p>
+                The counter keeps the score. What are you waiting for? Close this menu and Good Luck!</p>
         </div>
     </header>
     <div class="start-game show" id="startGame">
