--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
     <!-- favicon -->
-    <link rel="icon" type="image/icon" href="/favicon.ico">
+    <link rel="icon" type="image/icon" href="favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Speed Typing Game</title>
 </head>
