--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
     <script src="assets/js/words.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="assets/js/mail.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 
